# football

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
backend/: package.json  pnpm-lock.yaml
backend/src/: app.ts  server.ts
backend/src/config/: index.ts
backend/src/utils/errors/: ApplicationError.ts  BaseError.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/commands/: save.rs
src-tauri/src/core/save/: model.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/database/: connection.rs
src-tauri/src/infrastructure/save/: repository.rs
src-tauri/src/migrations/: 2025_07_12_create_save.sql
