[package]
edition = "2021"
name = "football"
version = "1.0.0"
description = "a football management application for desktop."
authors = ["Victor Olimpio Vasconcelos <victorlimpiovasconcelos.dev@gmail.com>"]

[lib]
name = "football_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.46.1", features = ["full"] }
chrono = "0.4.41"
sqlx = { version = "0.8", features = ["sqlite", "uuid", "chrono", "runtime-tokio"] }
